# FormationFlightPIDControl

./: .gitignore  README.md  aircraft6DOF.py  debug_sim.py  pyproject.toml
src/formation_flight_pid_control/: __init__.py  airplane.py  controllers.py  formation.py  geometry.py  main.py  params.py  simulation.py  utils.py  visualization.py  wake.py  world.py
