[project]
name = "formation-flight-pid-control"
version = "0.1.0"
description = "Simple 6DOF airplane dynamics model with formation flight PID control and live 3D visualization"
authors = [
    {name = "Peter Ryseck"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "numpy-quaternion>=2023.0.6",
]

[project.scripts]
formation-flight = "formation_flight_pid_control.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formation_flight_pid_control"]
